stopped-overflow

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 575px) {
   form {
-    width: 269px;
+    width: 286px;
   }
   .isteLogo {
     width: 70px;
